# track_twitter_to_tg

./: .gitignore  README.rst  conf.py  main.py  pyproject.toml
tests/: conftest.py  test_track_twitter_tgbot.py
track_twitter_tgbot/: bot.py  scraper.py  sqlite.py
