[tool.poetry]
name = "track_twitter-tgbot"
version = "0.1.0"
description = ""
authors = ["Matthew Wisdom <matthewwisdom11@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Telethon = "^1.24.0"
pytz = "^2022.2.1"
snscrape = "^0.4.3"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
